# Binner

./: .gitignore  CMakeLists.txt  README.md
include/: Binner.hpp  Globals.hpp  TitleInserter.hpp
src/: Binner.cpp  TitleInserter.cpp  main.cpp
